--- a/grading.qmd
+++ b/grading.qmd
@@ -98,4 +98,4 @@ Insgesamt wird der Arbeit die Note \raisebox{-.1cm}{\TextField[width=1cm, name=f
 
 \noindent\rule[7pt]{\linewidth}{0.4pt}
 
-\small Notenschlüssel = **1,0**: ab 96%; **1,3**: 95-91%; **1,7**: 90-86%; **2,0**: 85-81%; **2,3**: 80-76%; **2,7**: 75-71%; **3,0**: 70-66%; **3,3**: 65-61%; **3,7**: 60-56%; **4,0**: 55-51%; **nicht bestanden**: 50% und weniger oder in zwei Teilbereichen 0%.
+\small Notenschlüssel = **15**: ab 96%; **14**: 95-91%; **13**: 90-86%; **12**: 85-81%; **11**: 80-76%; **10**: 75-71%; **09**: 70-66%; **08**: 65-61%; **07**: 60-56%; **06**: 55-51%; **05**: 50-46%; **04**: 45-41%; **03**: 40-34%; **02**: 33-27%; **01**: 27-21%; **00**: bis 20%.
